--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,14 @@
-version: 2.1
+version: '2.1'
 orbs:
   maven: circleci/maven@1.4.1
-executors:
-  maven-executor:
-    docker:
-      - image: cimg/openjdk:21.0
 jobs:
-  maven-test:
-    executor: maven-executor
+  build:
+    executor:
+      name: maven/default
+      tag: "21.0"
     steps:
       - setup_remote_docker:
           version: 20.10.14
           docker_layer_caching: true
       - checkout
       - run: "./mvnw verify"
-workflows:
-  maven_test:
-    jobs:
-      - maven-test
