--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,13 @@
 version: '2.1'
 orbs:
   maven: circleci/maven@1.4.1
-executors:
-  machine_executor_amd64:
-    machine:
-      image: ubuntu-2204:2024.04.4
-    environment:
-      architecture: "amd64"
-      platform: "linux/amd64"
+  tcc: atomicjar/testcontainers-cloud-orb@0.1.0
 workflows:
   maven_test:
     jobs:
       - maven/test:
-          executor: machine_executor_amd64
+          executor:
+            name: maven/default
+            tag: "21.0"
+          pre-steps:
+            - tcc/setup
